test/corpus/compound_literal.txt
===============================================================================
Array empty
===============================================================================

[]

---

(source_file
  (select_list
    (select_result
      (array_literal))))

===============================================================================
Array with one element
===============================================================================

[null]

---

(source_file
  (select_list
    (select_result
      (array_literal
        (NULL)))))

===============================================================================
Array with two elements
===============================================================================

[null, null]

---

(source_file
  (select_list
    (select_result
      (array_literal
        (NULL)
        (NULL)))))

===============================================================================
Dict empty
===============================================================================

{}

---

(source_file
  (select_list
    (select_result
      (dict_literal))))

===============================================================================
Dict with one entry
===============================================================================

{"a": null}

---

(source_file
  (select_list
    (select_result
      (dict_literal
        (dict_entry
          key:   (string_literal)
          value: (NULL))))))

===============================================================================
Dict with two entries
===============================================================================

{"a": null, "b": null}

---

(source_file
  (select_list
    (select_result
      (dict_literal
        (dict_entry
          key:   (string_literal)
          value: (NULL))
        (dict_entry
          key:   (string_literal)
          value: (NULL))))))
